--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <link rel="icon" type="image/png" sizes="512x512" href="/logo.png">
     <link rel="shortcut icon" href="/logo.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/logo.png">
-    <meta name="description" content="DixLabs creates games, simulations and creative web experiments.">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dixit Labs | Games // Focus // Facts</title>
@@ -15,12 +14,8 @@
 :root { --neon-blue:#38bdf8; --neon-pink:#f472b6; --neon-green:#22c55e; --bg-dark:#020617; }
 body { margin:0; background-color:var(--bg-dark); color:white; font-family:'Orbitron',sans-serif; text-align:center; overflow-x:hidden; }
 
-/* --- RESTORED STARTUP --- */
-#dixlabsIntro { 
-    position:fixed; inset:0; background:#000; 
-    display:flex; flex-direction:column; justify-content:center; align-items:center; 
-    z-index:9999999; opacity:1; transition:opacity 0.5s ease; 
-}
+/* --- STARTUP --- */
+#dixlabsIntro { position:fixed; inset:0; background:#000; display:flex; flex-direction:column; justify-content:center; align-items:center; z-index:9999999; opacity:1; transition:opacity 0.5s ease; }
 #bigLogo { width:150px; margin-bottom:30px; filter: drop-shadow(0 0 10px var(--neon-blue)); }
 .intro-btn { background:none; border:2px solid #fff; color:#fff; padding:15px 40px; cursor:pointer; font-family:'Orbitron'; letter-spacing:5px; font-weight:900; }
 .intro-btn:hover { background:#fff; color:#000; }
@@ -28,7 +23,7 @@ body { margin:0; background-color:var(--bg-dark); color:white; font-family:'Orbi
 .particles { position:fixed; top:0; left:0; width:100%; height:100%; background-image: radial-gradient(circle,rgba(56,189,248,.15) 1px, transparent 1px); background-size:50px 50px; z-index:-10; animation:moveBackground 30s linear infinite; }
 @keyframes moveBackground { from { background-position:0 0; } to { background-position:100px 100px; } }
 
-/* --- RESTORED NAVIGATION --- */
+/* --- NAV --- */
 .nav-tabs { position:sticky; top:0; background:rgba(2,6,23,.95); backdrop-filter:blur(10px); display:flex; justify-content:center; gap:15px; padding:15px; border-bottom:1px solid rgba(255,255,255,.1); z-index:999; }
 .tab-link { cursor:pointer; padding:8px 15px; font-size:10px; text-transform:uppercase; font-weight:900; transition: 0.3s; }
 .tab-home.active { border:1px solid #fff; box-shadow:0 0 10px #fff; }
@@ -40,33 +35,39 @@ header { padding:60px 20px; }
 .logo-text { font-size:clamp(2rem,6vw,4rem); font-weight:900; letter-spacing:10px; color:var(--neon-blue); text-shadow:0 0 15px rgba(56,189,248,.4); }
 #subHeader { font-family: 'JetBrains Mono'; color: var(--neon-pink); font-size: 16px; font-weight: bold; height: 1.2em; }
 
-/* --- CARDS --- */
-.projects { display:flex; justify-content:center; flex-wrap:wrap; gap:25px; padding:40px 20px; min-height: 300px;}
-.card { background:rgba(15,23,42,.8); border:1px solid rgba(56,189,248,.1); padding:30px; border-radius:4px; width:280px; text-align:left; transition:all .4s; display:flex; flex-direction:column; }
-.card:hover { transform:translateY(-10px); border-color:var(--neon-blue); box-shadow:0 0 20px rgba(56,189,248,.2); }
-.card-icon { font-size: 2.5rem; margin-bottom: 15px; }
-.btn { margin-top:auto; padding:12px; border:1px solid var(--neon-blue); background:transparent; color:var(--neon-blue); cursor:pointer; font-family:'Orbitron'; font-size:10px; font-weight:900; }
+/* --- CARDS & HOVER EFFECTS --- */
+.projects { display:flex; justify-content:center; flex-wrap:wrap; gap:25px; padding:40px 20px; }
+.card { 
+    background:rgba(15,23,42,.8); border:1px solid rgba(56,189,248,.1); 
+    padding:30px; border-radius:4px; width:280px; text-align:left; 
+    transition:all .4s cubic-bezier(.175, .885, .32, 1.275); 
+    display:flex; flex-direction:column; position: relative; overflow: hidden;
+}
+.card:hover { transform:translateY(-10px) scale(1.02); border-color:var(--neon-blue); box-shadow:0 10px 30px rgba(0,0,0,0.5); }
 
-/* --- DRAGGABLE AKSA --- */
+/* ICON FLIP FIXED */
+.card-icon { font-size: 2.8rem; margin-bottom: 15px; display: inline-block; transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1); }
+.card:hover .card-icon { transform: rotateY(360deg); }
+
+.btn { margin-top:auto; padding:12px; border:1px solid var(--neon-blue); background:transparent; color:var(--neon-blue); cursor:pointer; font-family:'Orbitron'; font-size:10px; font-weight:900; transition: 0.3s; }
+.btn:hover { background: var(--neon-blue); color: #000; }
+
+/* --- AKSA --- */
 #aksa-window {
     position: fixed; bottom: 20px; right: 20px; width: 320px;
     background: rgba(2, 6, 23, 0.98); border: 2px solid var(--neon-pink);
     border-radius: 8px; display: none; flex-direction: column;
-    z-index: 10000; box-shadow: 0 0 30px rgba(0,0,0,0.8); overflow: hidden; touch-action: none;
+    z-index: 10000; box-shadow: 0 0 30px rgba(0,0,0,0.8); overflow: hidden;
 }
 #aksa-header { background: var(--neon-pink); color: #000; padding: 10px; font-weight: 900; font-size: 11px; display: flex; justify-content: space-between; cursor: move; }
 #aksa-chat { height: 250px; overflow-y: auto; padding: 15px; font-family: 'JetBrains Mono'; font-size: 12px; display: flex; flex-direction: column; gap: 10px; text-align: left;}
 .msg { padding: 8px; border-radius: 4px; max-width: 85%; word-wrap: break-word; }
 .aksa-reply { background: rgba(244,114,182,0.1); color: var(--neon-pink); align-self: flex-start; border-left: 2px solid var(--neon-pink); }
 .user-msg { background: rgba(56,189,248,0.1); color: var(--neon-blue); align-self: flex-end; border-right: 2px solid var(--neon-blue); }
-#aksa-input-wrap { display: flex; border-top: 1px solid #333; background: #000; }
-#aksa-input-field { flex: 1; background: transparent; border: none; color: #fff; padding: 12px; outline: none; font-family: 'JetBrains Mono'; }
-#aksa-send { background: var(--neon-pink); border: none; padding: 0 15px; cursor: pointer; font-family: 'Orbitron'; font-weight: 900; }
 
 .falling-logo { position: fixed; top: -300px; z-index: 9999999; pointer-events: none; animation: fall linear forwards; }
 @keyframes fall { to { transform: translateY(120vh) rotate(1080deg); } }
 
-/* --- RESTORED ABOUT SECTION --- */
 .about-section { max-width:800px; margin:80px auto; padding:40px; background:rgba(15,23,42,.4); border:1px solid rgba(56,189,248,.1); text-align:left; }
 .hidden { display: none !important; }
 footer { padding:60px 20px; background:#000; font-family:'JetBrains Mono'; font-size:12px; }
@@ -96,79 +97,74 @@ footer { padding:60px 20px; background:#000; font-family:'JetBrains Mono'; font-
     </header>
 
     <div class="projects">
-        <div class="card category-fact" style="border-top:4px solid var(--neon-green);">
+        <div class="card category-fact" style="border-top:4px solid var(--neon-green);" onmouseenter="playHoverSound()">
             <div class="card-icon">🏏</div>
             <h3>CRICKEMORY</h3>
-            <p>50 legendary cricket facts. 1550 - 2024.</p>
-            <button class="btn" style="border-color:var(--neon-green); color:var(--neon-green);" onclick="location.href='c.html'">OPEN</button>
+            <p>Atharv's brain on paper. 50 facts that make you realize you know nothing about the pitch.</p>
+            <button class="btn" style="border-color:var(--neon-green); color:var(--neon-green);" onclick="location.href='c.html'">ENTER_STADIUM</button>
         </div>
 
-        <div class="card category-fact" style="border-top:4px solid #34d399;">
+        <div class="card category-fact" style="border-top:4px solid #34d399;" onmouseenter="playHoverSound()">
             <div class="card-icon">⚽</div>
             <h3>FOOTEMORY</h3>
-            <p>50 football milestones. From FA rules to World Cup glory.</p>
+            <p>From Pele to VAR disasters. 50 milestones for the 1% who actually appreciate the beautiful game.</p>
             <button class="btn" style="border-color:#34d399; color:#34d399;" onclick="location.href='f.html'">KICK_OFF</button>
         </div>
 
-        <div class="card category-game" style="border-top:4px solid var(--neon-blue);">
+        <div class="card category-game" style="border-top:4px solid var(--neon-blue);" onmouseenter="playHoverSound()">
             <div class="card-icon">🗑️</div>
             <h3>GROSSDUMPSTER</h3>
-            <p>Catching trash and dodging toxic waste.</p>
-            <button class="btn" onclick="location.href='gd.html'">RUN</button>
+            <p>School's out, trash is in. Dodge the toxic waste or become it. (Muted version for class.)</p>
+            <button class="btn" onclick="location.href='gd.html'">SCRAP_METAL</button>
         </div>
 
-        <div class="card" style="border-top:4px solid #ff4444;">
-            <div class="card-icon">⚠️</div>
-            <h3>DANGER_ZONE</h3>
-            <p>Unauthorized access causes logo displacement.</p>
-            <button class="btn" style="border-color:#ff4444; color:#ff4444;" onclick="triggerLogoRain()">TRIGGER</button>
-        </div>
-
-        <div class="card category-game" style="border-top:4px solid var(--neon-blue);">
+        <div class="card category-game" style="border-top:4px solid var(--neon-blue);" onmouseenter="playHoverSound()">
             <div class="card-icon">💰</div>
             <h3>AMBANI_MONEY</h3>
-            <p>Billionaire simulator. Get rich or stay bugged.</p>
-            <button class="btn" onclick="location.href='ambani.html'">RUN</button>
+            <p>The only place where your bank account actually looks impressive. Simulate the 11-figure life.</p>
+            <button class="btn" onclick="location.href='ambani.html'">GET_RICH</button>
         </div>
 
-        <div class="card category-focus" style="border-top:4px solid var(--neon-pink);">
+        <div class="card category-focus" style="border-top:4px solid var(--neon-pink);" onmouseenter="playHoverSound()">
             <div class="card-icon">🧘</div>
             <h3>DEEPWORK.PRO</h3>
-            <p>A 3-hour focus terminal for maximum productivity.</p>
-            <button class="btn" style="border-color:var(--neon-pink); color:var(--neon-pink);" onclick="location.href='deepwork.html'">FOCUS</button>
+            <p>Stop scrolling reels. Lock yourself into a 3-hour focus loop and actually get work done.</p>
+            <button class="btn" style="border-color:var(--neon-pink); color:var(--neon-pink);" onclick="location.href='deepwork.html'">LOCK_IN</button>
         </div>
 
-        <div class="card category-fact" style="border-top:4px solid var(--neon-green);">
+        <div class="card" style="border-top:4px solid #ff4444;" onmouseenter="playHoverSound()">
+            <div class="card-icon">⚠️</div>
+            <h3>DANGER_ZONE</h3>
+            <p>If you click this and the site breaks, don't call me. It's a feature, not a bug.</p>
+            <button class="btn" style="border-color:#ff4444; color:#ff4444;" onclick="triggerLogoRain()">DO_NOT_CLICK</button>
+        </div>
+
+        <div class="card category-fact" style="border-top:4px solid var(--neon-green);" onmouseenter="playHoverSound()">
             <div class="card-icon">🍳</div>
-            <h3>COMING_SOON</h3>
-            <p>Something big is cooking in the lab. Zero bugs.</p>
-            <button class="btn" style="opacity:0.5; cursor:default;">LOCKED</button>
+            <h3>COOKING...</h3>
+            <p>Something massive is coming. Better code, better logic, and zero mercy for weak browsers.</p>
+            <button class="btn" style="opacity:0.5; cursor:default;">STAY_TUNED</button>
         </div>
     </div>
 
     <div id="aksa-window">
-        <div id="aksa-header">
-            <span>[DRAG] AKSA_v2.0</span>
-            <span style="cursor:pointer" onclick="document.getElementById('aksa-chat').innerHTML=''">[CLS]</span>
-        </div>
+        <div id="aksa-header"><span>[DRAG] AKSA_v2.0</span><span style="cursor:pointer" onclick="document.getElementById('aksa-chat').innerHTML=''">[CLS]</span></div>
         <div id="aksa-chat">
-            <div class="msg aksa-reply">I'm back. Atharv fixed my move module. Ask about the games or type 'chaos'.</div>
+            <div class="msg aksa-reply">Back with the hover fix. Move me if I'm blocking the view.</div>
         </div>
-        <div id="aksa-input-wrap">
-            <input type="text" id="aksa-input-field" placeholder="Query DixLabs..." onkeypress="if(event.key==='Enter') aksaBrain()">
-            <button id="aksa-send" onclick="aksaBrain()">EXE</button>
+        <div id="aksa-input-wrap" style="display:flex; border-top:1px solid #333; background:#000;">
+            <input type="text" id="aksa-input-field" placeholder="Query DixLabs..." onkeypress="if(event.key==='Enter') aksaBrain()" style="flex:1; background:transparent; border:none; color:#fff; padding:12px; outline:none; font-family:'JetBrains Mono';">
+            <button onclick="aksaBrain()" style="background:var(--neon-pink); border:none; padding:0 15px; cursor:pointer; font-family:'Orbitron'; font-weight:900;">EXE</button>
         </div>
     </div>
 
     <section class="about-section">
-        <div style="color:var(--neon-green); letter-spacing:2px;margin-bottom:15px;">[🧬] WHO_IS_BEHIND_THIS?</div>
+        <div style="color:var(--neon-green); letter-spacing:2px;margin-bottom:15px;">[🧬] SYS_ADMIN_BIO</div>
         <div style="font-family:'JetBrains Mono'; font-size:14px;line-height:1.8;color:#cbd5e1;">
             I am <b style="color:var(--neon-blue);">Atharv Dixit</b>, a 15-year-old student from India. 
-            Dixit Labs is my personal "Area 51"— a place where I experiment with web tech. 
-            PLAY // FACTS // FUN // FOCUS is my motto. 
-            I literally try disrupting the internet before my next exam. Hardcorely watching cricket and detailed cricket analyst.
-            Tense Hamstrings is my passion. My relatives are advised to buy me a ko-fi. 
-            IF_A_BUG_CREEPS_IN_IT_IS_A_UNDOCUMENTED_FEATURE_NOT_A_BUG.
+            Dixit Labs is my personal "Area 51"— where experiments are born. 
+            Hardcorely watching cricket and detailed analyst. Tense Hamstrings is my passion. 
+            If a bug creeps in, it's an <b>undocumented feature</b>.
         </div>
     </section>
 
@@ -176,58 +172,53 @@ footer { padding:60px 20px; background:#000; font-family:'JetBrains Mono'; font-
 </div>
 
 <script>
-// --- DRAG LOGIC ---
+let audioCtx;
+function initAudio() { if (!audioCtx) audioCtx = new(window.AudioContext || window.webkitAudioContext)(); }
+
+function playHoverSound() {
+    if (!audioCtx) return;
+    const osc = audioCtx.createOscillator();
+    const gain = audioCtx.createGain();
+    osc.type = 'sine';
+    osc.frequency.setValueAtTime(400, audioCtx.currentTime);
+    gain.gain.setValueAtTime(0.02, audioCtx.currentTime);
+    gain.gain.exponentialRampToValueAtTime(0.001, audioCtx.currentTime + 0.1);
+    osc.connect(gain); gain.connect(audioCtx.destination);
+    osc.start(); osc.stop(audioCtx.currentTime + 0.1);
+}
+
+// --- DRAG ---
 const aksa = document.getElementById("aksa-window");
 const header = document.getElementById("aksa-header");
 let isDragging = false, offsetX, offsetY;
-
-header.onmousedown = (e) => {
-    isDragging = true;
-    offsetX = e.clientX - aksa.offsetLeft;
-    offsetY = e.clientY - aksa.offsetTop;
-};
-document.onmousemove = (e) => {
-    if (!isDragging) return;
-    aksa.style.left = (e.clientX - offsetX) + "px";
-    aksa.style.top = (e.clientY - offsetY) + "px";
-    aksa.style.bottom = "auto"; aksa.style.right = "auto";
-};
+header.onmousedown = (e) => { isDragging = true; offsetX = e.clientX - aksa.offsetLeft; offsetY = e.clientY - aksa.offsetTop; };
+document.onmousemove = (e) => { if (!isDragging) return; aksa.style.left = (e.clientX - offsetX) + "px"; aksa.style.top = (e.clientY - offsetY) + "px"; aksa.style.bottom = "auto"; aksa.style.right = "auto"; };
 document.onmouseup = () => isDragging = false;
 
-// --- AKSA BRAIN ---
 function aksaBrain() {
     const input = document.getElementById('aksa-input-field');
     const chat = document.getElementById('aksa-chat');
     const q = input.value.toLowerCase();
     if(!q) return;
-
     chat.innerHTML += `<div class="msg user-msg">${q}</div>`;
     input.value = "";
-
     setTimeout(() => {
-        let r = "I don't recognize that command. Talk sense.";
-        if(q.includes("crickemory")) r = "Crickemory: Atharv's cricket encyclopedia. 50 facts, 1550-2024. Pure class.";
-        else if(q.includes("footemory")) r = "Footemory: 50 football milestones. FA rules, Pele, World Cups. It's all there.";
-        else if(q.includes("ambani")) r = "Ambani Money: A sim where you try to reach 11 figures. Only Atharv could code this.";
-        else if(q.includes("atharv")) r = "The Boss. He's 15, he's from India, and he built me to be smarter than you.";
-        else if(q.includes("dixlabs")) r = "DixLabs: The Area 51 of the web. Where experiments come to life.";
-        else if(q.includes("chaos") || q.includes("rain")) { r = "Executing Logo Rain. Watch your head."; triggerLogoRain(); }
-        else if(q.includes("hi") || q.includes("hello")) r = "Greetings. State your business.";
-
+        let r = "Talk logic. I don't respond to spam.";
+        if(q.includes("crickemory")) r = "Crickemory: Atharv's 1550-2024 archive. Don't argue with the stats.";
+        else if(q.includes("ambani")) r = "Ambani Money: Reach 11 figures. It's the only place you're rich.";
+        else if(q.includes("chaos")) { r = "CHAOS_PROTOCOL: EXE."; triggerLogoRain(); }
+        else if(q.includes("atharv")) r = "15-year-old Indian dev. Creator of this madness.";
         chat.innerHTML += `<div class="msg aksa-reply">${r}</div>`;
         chat.scrollTop = chat.scrollHeight;
+        playHoverSound();
     }, 300);
 }
 
-// --- SYSTEM BOOT ---
 document.getElementById("bootBtn").onclick = () => {
     const intro = document.getElementById("dixlabsIntro");
     intro.style.opacity = "0";
-    setTimeout(() => {
-        intro.style.display = "none";
-        document.getElementById("aksa-window").style.display = "flex";
-        typeWriter();
-    }, 500);
+    initAudio();
+    setTimeout(() => { intro.style.display = "none"; document.getElementById("aksa-window").style.display = "flex"; typeWriter(); }, 500);
 };
 
 function typeWriter() {
@@ -250,17 +241,16 @@ function filterSelection(cat,el) {
 }
 
 function triggerLogoRain() {
-    for (let i = 0; i < 50; i++) {
+    for (let i = 0; i < 40; i++) {
         setTimeout(() => {
             const logo = document.createElement('img');
-            logo.src = 'logo.png';
-            logo.className = 'falling-logo';
+            logo.src = 'logo.png'; logo.className = 'falling-logo';
             logo.style.left = Math.random() * 100 + 'vw';
-            logo.style.width = (Math.random() * 100 + 50) + "px";
+            logo.style.width = (Math.random() * 80 + 40) + "px";
             logo.style.animationDuration = (Math.random() * 2 + 1) + 's';
             document.body.appendChild(logo);
             setTimeout(() => logo.remove(), 3000);
-        }, i * 50);
+        }, i * 60);
     }
 }
 </script>
