--- a/index.html
+++ b/index.html
@@ -20,7 +20,22 @@
     --neon-orange:#fb923c; 
     --bg-dark:#020617; 
 }
-body { margin:0; background-color:var(--bg-dark); color:white; font-family:'Orbitron',sans-serif; text-align:center; overflow-x:hidden; min-height: 100vh; transition: background 0.5s; }
+body { 
+    margin:0; 
+    background-color:var(--bg-dark); 
+    color:white; 
+    font-family:'Orbitron',sans-serif; 
+    text-align:center; 
+    overflow-x:hidden; 
+    min-height: 100vh; 
+    transition: background 0.8s ease, box-shadow 0.8s ease;
+}
+
+/* --- DYNAMIC BACKGROUND GLOWS --- */
+body.bg-game { background-color: #020c1b; box-shadow: inset 0 0 100px rgba(56,189,248,0.1); }
+body.bg-focus { background-color: #0d020d; box-shadow: inset 0 0 100px rgba(244,114,182,0.1); }
+body.bg-fact { background-color: #020d05; box-shadow: inset 0 0 100px rgba(34,197,94,0.1); }
+body.bg-aksa { background-color: #0d0602; box-shadow: inset 0 0 100px rgba(251,146,60,0.1); }
 
 /* --- DISCO PARTY ENGINE --- */
 #partyOverlay { position: fixed; inset: 0; display: none; background: rgba(0,0,0,0.98); z-index: 1000000; flex-direction: column; justify-content: center; align-items: center; pointer-events: none; }
@@ -43,7 +58,7 @@ body { margin:0; background-color:var(--bg-dark); color:white; font-family:'Orbi
 /* --- HEADER --- */
 header { padding: 120px 20px 60px; min-height: 250px; }
 .logo-text { font-size: 8rem; font-weight: 900; letter-spacing: 25px; color: var(--neon-blue); text-shadow: 0 0 40px rgba(56,189,248,0.7); margin: 0; transition: 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
-#subHeader { font-family: 'JetBrains Mono'; color: var(--neon-pink); font-size: 18px; margin-top: 25px; font-weight: bold; letter-spacing: 4px; height: 30px; }
+#subHeader { font-family: 'JetBrains Mono'; color: var(--neon-pink); font-size: 18px; margin-top: 25px; font-weight: bold; letter-spacing: 4px; min-height: 30px; }
 
 /* --- NAV BAR --- */
 .nav-tabs { position:sticky; top:0; background:rgba(2,6,23,0.98); backdrop-filter:blur(15px); display:flex; justify-content:center; gap:30px; padding:25px; border-bottom:1px solid rgba(56,189,248,0.2); z-index:999; }
@@ -51,7 +66,7 @@ header { padding: 120px 20px 60px; min-height: 250px; }
 .tab-link.active { color: #fff; text-shadow: 0 0 10px #fff; border-bottom: 2px solid var(--neon-blue); }
 
 /* --- PROJECT GRID --- */
-.projects { display: flex; flex-wrap: wrap; justify-content: center; max-width: 1400px; margin: 0 auto; gap: 30px; padding: 100px 20px; }
+.projects { display: flex; flex-wrap: wrap; justify-content: center; max-width: 1400px; margin: 0 auto; gap: 40px; padding: 100px 20px; }
 .card { background:rgba(15,23,42,0.8); border:1px solid rgba(56,189,248,0.1); padding:40px; border-radius:4px; width: 320px; text-align:left; transition:0.4s; display:flex; flex-direction:column; border-top: 5px solid transparent; position: relative; }
 .card:hover { transform:translateY(-15px); border-color:inherit; box-shadow:0 20px 50px rgba(0,0,0,0.7); }
 .card-icon { font-size: 3.5rem; margin-bottom: 25px; display: inline-block; transition: 0.6s; }
@@ -72,25 +87,23 @@ header { padding: 120px 20px 60px; min-height: 250px; }
 .category-danger { border-top-color: #ff0000; }
 .category-danger .btn { color: #ff0000; border-color: #ff0000; }
 
-/* --- SOCIAL LINKS --- */
-.social-footer-strip { margin: 150px 0; display: flex; flex-direction: column; align-items: center; gap: 40px; }
-.social-icons-wrap { display: flex; gap: 60px; }
-.social-icon-link svg { width: 60px; height: 60px; fill: #64748b; transition: 0.4s; }
-.social-icon-link:hover svg { fill: white; filter: drop-shadow(0 0 15px var(--neon-blue)); transform: translateY(-10px); }
-.social-icon-link.yt:hover svg { fill: #ff0000; filter: drop-shadow(0 0 15px #ff0000); }
-
 /* --- AKSA CHAT --- */
 #aksa-tab-content { width: 100%; max-width: 900px; margin: 50px auto; display: none; flex-direction: column; background: #000; border: 2px solid var(--neon-orange); border-radius: 8px; overflow: hidden; }
 #aksa-chat { height: 500px; overflow-y: auto; padding: 30px; font-family: 'JetBrains Mono'; font-size: 15px; display: flex; flex-direction: column; gap: 20px; text-align: left; }
-.aksa-reply { background: rgba(251,146,60,0.1); color: var(--neon-orange); border-left: 5px solid var(--neon-orange); padding: 15px; border-radius: 0 10px 10px 0; }
-.user-msg { background: rgba(56,189,248,0.1); color: var(--neon-blue); align-self: flex-end; border-right: 5px solid var(--neon-blue); padding: 15px; border-radius: 10px 0 0 10px; }
-#aksa-input-wrap { display: flex; border-top: 1px solid #222; background: #0a0a0a; }
+.aksa-reply { background: rgba(251,146,60,0.1); color: var(--neon-orange); border-left: 5px solid var(--neon-orange); padding: 15px; }
+.user-msg { background: rgba(56,189,248,0.1); color: var(--neon-blue); align-self: flex-end; border-right: 5px solid var(--neon-blue); padding: 15px; }
+#aksa-input-wrap { display: flex; border-top: 1px solid #222; }
 #aksa-input-field { flex: 1; background: transparent; border: none; color: #fff; padding: 25px; outline: none; font-family: 'JetBrains Mono'; font-size: 16px; }
 #aksa-send { background: var(--neon-orange); border: none; padding: 0 45px; cursor: pointer; font-weight: 900; color: #000; font-family: 'Orbitron'; }
 
-.about-section { max-width: 1000px; margin: 150px auto; padding: 80px; background: rgba(15,23,42,0.5); border: 1px solid rgba(56,189,248,0.1); text-align: left; border-radius: 15px; }
+/* --- BIO & STATS --- */
+.stats-container { max-width: 1000px; margin: 100px auto 0; padding: 40px 80px; background: rgba(15,23,42,0.5); border: 1px solid rgba(56,189,248,0.1); border-top: 5px solid var(--neon-blue); border-radius: 15px 15px 0 0; text-align: left; }
+.about-section { max-width: 1000px; margin: 0 auto 150px; padding: 60px 80px; background: rgba(15,23,42,0.5); border: 1px solid rgba(56,189,248,0.1); border-top: 1px solid rgba(56,189,248,0.1); text-align: left; border-radius: 0 0 15px 15px; }
 .about-header { color: var(--neon-green); font-size: 28px; font-weight: 900; margin-bottom: 40px; letter-spacing: 5px; }
 .bio-text { font-family: 'JetBrains Mono'; color: #cbd5e1; font-size: 17px; line-height: 2.2; }
+.stat-item { display: inline-block; margin-right: 40px; font-family: 'JetBrains Mono'; font-size: 14px; }
+.stat-label { color: var(--neon-blue); font-weight: bold; }
+
 .hidden { display: none !important; }
 @media (max-width: 1024px) { .logo-text { font-size: 4rem; letter-spacing: 15px; } }
 </style>
@@ -127,7 +140,7 @@ header { padding: 120px 20px 60px; min-height: 250px; }
     </header>
 
     <div id="aksa-tab-content">
-        <div id="aksa-chat"><div class="msg aksa-reply">Data synced. AKSA online. I've been told to be "nice," but I prefer "honest." Ask me anything about the sites or the developer.</div></div>
+        <div id="aksa-chat"><div class="msg aksa-reply">Data synced. TRUTH_ENGINE online. Challenge the logic.</div></div>
         <div id="aksa-input-wrap">
             <input type="text" id="aksa-input-field" placeholder="Challenge the AI..." onkeypress="if(event.key==='Enter') aksaBrain()">
             <button id="aksa-send" onclick="aksaBrain()">EXE</button>
@@ -193,6 +206,13 @@ header { padding: 120px 20px 60px; min-height: 250px; }
         </div>
     </div>
 
+    <section class="stats-container" id="statsSection">
+        <div class="stat-item"><span class="stat-label">PROJECTS_ACTIVE:</span> 09</div>
+        <div class="stat-item"><span class="stat-label">LOGIC_LINES:</span> 15.2k+</div>
+        <div class="stat-item"><span class="stat-label">SERVER:</span> ASIA_SOUTH_01</div>
+        <div class="stat-item"><span class="stat-label">STATUS:</span> NOMINAL</div>
+    </section>
+
     <section class="about-section" id="bioSection">
         <div class="about-header">[🧬] SYSTEM_ADMIN: Atharv Dixit</div>
         <div class="bio-text">
@@ -206,12 +226,11 @@ header { padding: 120px 20px 60px; min-height: 250px; }
             If the site breaks, it's a feature. If it works, it's a miracle. 
             तब तक दुआओं में याद रखें (Keep me in your prayers).
             <br>
-            <a href="mailto:dixit181896@gmail.com" class="about-email" style="color:var(--neon-blue); text-decoration:none; border-bottom:2px solid;">SYS_CONTACT: dixit181896@gmail.com</a>
+            <a href="mailto:dixit181896@gmail.com" style="color:var(--neon-blue); text-decoration:none; border-bottom:2px solid;">SYS_CONTACT: dixit181896@gmail.com</a>
         </div>
     </section>
 
     <div class="social-footer-strip">
-        <h2 style="font-family:'Orbitron'; letter-spacing:10px; opacity:0.6;">CONNECT_LABS</h2>
         <div class="social-icons-wrap">
             <a href="https://x.com/dixlabsOFF" target="_blank" class="social-icon-link">
                 <svg viewBox="0 0 24 24"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
@@ -228,6 +247,7 @@ header { padding: 120px 20px 60px; min-height: 250px; }
 </div>
 
 <script>
+// AKSA Logic
 const siteKnowledge = {
     "dixlabs": "Experimental HQ. Where focus meets chaos.",
     "mouse": "Mouse Breaker Empire: Start broke, end as a multiversal trillionaire.",
@@ -250,6 +270,7 @@ function aksaBrain() {
     input.value = "";
 }
 
+// Initializing Core
 document.getElementById("bootBtn").onclick = function() {
     this.style.display = "none";
     document.getElementById("loaderContainer").style.display = "block";
@@ -260,19 +281,59 @@ document.getElementById("bootBtn").onclick = function() {
     const interval = setInterval(() => {
         p += 2; fill.style.width = p + "%";
         status.innerText = messages[Math.floor(p/25)] || "DONE";
-        if(p >= 100) { clearInterval(interval); document.getElementById("dixlabsIntro").style.opacity = "0"; setTimeout(() => { document.getElementById("dixlabsIntro").style.display = "none"; typeWriter("DIXLABS", "> EXPERIMENTAL_PLAYGROUND // GAMES // FOCUS // FACTS", "var(--neon-blue)"); }, 500); }
+        if(p >= 100) { 
+            clearInterval(interval); 
+            document.getElementById("dixlabsIntro").style.opacity = "0"; 
+            setTimeout(() => { 
+                document.getElementById("dixlabsIntro").style.display = "none"; 
+                updateHeader('all'); 
+            }, 500); 
+        }
     }, 40);
 };
 
-function typeWriter(title, sub, color) {
-    const main = document.getElementById("mainHeader");
+// Typewriter only for Home
+function typeWriter(txt) {
     const el = document.getElementById("subHeader");
-    main.innerText = title;
-    main.style.color = color;
-    main.style.textShadow = `0 0 40px ${color}`;
     let i = 0; el.innerHTML = "";
-    function type() { if(i < sub.length) { el.innerHTML += sub.charAt(i); i++; setTimeout(type, 30); } }
+    function type() { if(i < txt.length) { el.innerHTML += txt.charAt(i); i++; setTimeout(type, 30); } }
     type();
+}
+
+function updateHeader(cat) {
+    const main = document.getElementById("mainHeader");
+    const sub = document.getElementById("subHeader");
+    const body = document.body;
+    
+    // Reset Body Classes
+    body.classList.remove('bg-game', 'bg-focus', 'bg-fact', 'bg-aksa');
+
+    if (cat === 'all') {
+        main.innerText = "DIXLABS";
+        main.style.color = "var(--neon-blue)";
+        main.style.textShadow = "0 0 40px var(--neon-blue)";
+        typeWriter("> EXPERIMENTAL_PLAYGROUND // GAMES // FOCUS // FACTS");
+    } else if (cat === 'game') {
+        body.classList.add('bg-game');
+        main.innerText = "GAMES";
+        main.style.color = "var(--neon-blue)";
+        sub.innerText = "> SIMULATORS // EMPIRES // PIXEL_CHAOS";
+    } else if (cat === 'focus') {
+        body.classList.add('bg-focus');
+        main.innerText = "FOCUS";
+        main.style.color = "var(--neon-pink)";
+        sub.innerText = "> ZEN_CANVAS // DEEP_WORK // NO_NOISE";
+    } else if (cat === 'fact') {
+        body.classList.add('bg-fact');
+        main.innerText = "FACTS";
+        main.style.color = "var(--neon-green)";
+        sub.innerText = "> CRICKET_DATA // FOOTBALL_HISTORY // ELITE";
+    } else if (cat === 'aksa') {
+        body.classList.add('bg-aksa');
+        main.innerText = "AKSA";
+        main.style.color = "var(--neon-orange)";
+        sub.innerText = "> SYSTEM_INTELLIGENCE // TRUTH_ENGINE";
+    }
 }
 
 function triggerDiscoMode() {
@@ -286,21 +347,23 @@ function filterSelection(cat, el) {
     const tabs = document.querySelectorAll(".tab-link");
     tabs.forEach(t => t.classList.remove("active")); el.classList.add("active");
     
-    // Dynamic Header Logic
-    if(cat === 'all') typeWriter("DIXLABS", "> EXPERIMENTAL_PLAYGROUND // GAMES // FOCUS // FACTS", "var(--neon-blue)");
-    if(cat === 'game') typeWriter("GAMES", "> SIMULATORS // EMPIRES // PIXEL_CHAOS", "var(--neon-blue)");
-    if(cat === 'focus') typeWriter("FOCUS", "> ZEN_CANVAS // DEEP_WORK // NO_NOISE", "var(--neon-pink)");
-    if(cat === 'fact') typeWriter("FACTS", "> CRICKET_DATA // FOOTBALL_HISTORY // ELITE", "var(--neon-green)");
-    if(cat === 'aksa') typeWriter("AKSA", "> SYSTEM_INTELLIGENCE // TRUTH_ENGINE", "var(--neon-orange)");
+    updateHeader(cat);
 
-    if(cat==='aksa'){
-        document.getElementById('projectsGrid').classList.add('hidden');
-        document.getElementById('bioSection').classList.add('hidden');
-        document.getElementById('aksa-tab-content').style.display = 'flex';
+    const grid = document.getElementById('projectsGrid');
+    const stats = document.getElementById('statsSection');
+    const bio = document.getElementById('bioSection');
+    const aksa = document.getElementById('aksa-tab-content');
+
+    if (cat === 'aksa') {
+        grid.classList.add('hidden');
+        stats.classList.add('hidden');
+        bio.classList.add('hidden');
+        aksa.style.display = 'flex';
     } else {
-        document.getElementById('projectsGrid').classList.remove('hidden');
-        document.getElementById('bioSection').classList.remove('hidden');
-        document.getElementById('aksa-tab-content').style.display = 'none';
+        grid.classList.remove('hidden');
+        stats.classList.remove('hidden');
+        bio.classList.remove('hidden');
+        aksa.style.display = 'none';
         cards.forEach(c => {
             if(cat === 'all') c.classList.remove("hidden");
             else c.classList.contains("category-"+cat) ? c.classList.remove("hidden") : c.classList.add("hidden");
